--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Etch-a-Sketch</title>
 </head>
 <body>
     <div class="container"></div>
+      <div class="content"></div> 
+        <div class="board"></div>
+        <div class="buttons"></div>
+          <button>Black</button>
+          <button>White</button>
+          <button>Random Color</button>
+          <button>Reset</button>
 </body>
+<script src="scripts.js"></script>
 </html>
